--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -53,3 +53,16 @@
     cursor: pointer;
     margin: 10px;
 }
+
+.upload-file-contener{
+    padding: 15px;
+
+}
+
+.upload-file-contener label{
+    display: block;
+}
+
+hr {
+    border-top: 3px solid #eee !important;
+}
